--- a/refs.bib
+++ b/refs.bib
@@ -360,6 +360,32 @@ year = {2018}
 	journal = {Molecules}
 }
 
+@article{Pinaud_2013,
+	doi = {10.1039/c3ee40831k},
+	url = {https://doi.org/10.1039%2Fc3ee40831k},
+	year = 2013,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {6},
+	number = {7},
+	pages = {1983},
+	author = {Blaise A. Pinaud and Jesse D. Benck and Linsey C. Seitz and Arnold J. Forman and Zhebo Chen and Todd G. Deutsch and Brian D. James and Kevin N. Baum and George N. Baum and Shane Ardo and Heli Wang and Eric Miller and Thomas F. Jaramillo},
+	title = {Technical and economic feasibility of centralized facilities for solar hydrogen production via photocatalysis and photoelectrochemistry},
+	journal = {Energy {\&} Environmental Science}
+}
+
+@article{Shaner_2016,
+	doi = {10.1039/c5ee02573g},
+	url = {https://doi.org/10.1039%2Fc5ee02573g},
+	year = 2016,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {9},
+	number = {7},
+	pages = {2354--2371},
+	author = {Matthew R. Shaner and Harry A. Atwater and Nathan S. Lewis and Eric W. McFarland},
+	title = {A comparative technoeconomic analysis of renewable hydrogen production using solar energy},
+	journal = {Energy {\&} Environmental Science}
+}
+
 
 @article{Huang2007,
 abstract = {The volatile and upward trend in U.S. natural gas prices from 2000-06 has led to a 17- percent decline in the Nations annual aggregate supply of ammonia. During the period, U.S. ammonia production declined 44 percent, while U.S. ammonia imports increased 115 percent. Also, the share of U.S.-produced ammonia in the U.S. aggregate supply of ammonia dropped from 80 to 55 percent, while the share from imports increased from 15 percent to 42 percent. Meanwhile, ammonia prices paid by farmers increased from {\$}227 per ton in 2000 to {\$}521 per ton in 2006, an increase of 130 percent. Natural gas is the main input used to produce ammonia. Additional increases in U.S. natural gas prices could lead to a further decline in domestic ammonia production and an even greater rise in ammonia imports.},
@@ -707,6 +733,60 @@ title = {{Photocatalytic reactors: design for effective air purification}},
 url = {http://ijlct.oxfordjournals.org/content/1/1/47.abstract},
 volume = {1},
 year = {2006}
+}
+
+@article{Seitz_2014,
+	doi = {10.1002/cssc.201301030},
+	url = {https://doi.org/10.1002%2Fcssc.201301030},
+	year = 2014,
+	month = {apr},
+	publisher = {Wiley},
+	volume = {7},
+	number = {5},
+	pages = {1372--1385},
+	author = {Linsey C. Seitz and Zhebo Chen and Arnold J. Forman and Blaise A. Pinaud and Jesse D. Benck and Thomas F. Jaramillo},
+	title = {Modeling Practical Performance Limits of Photoelectrochemical Water Splitting Based on the Current State of Materials Research},
+	journal = {{ChemSusChem}}
+}
+
+@article{Seger_2016,
+	doi = {10.1002/solr.201600013},
+	url = {https://doi.org/10.1002%2Fsolr.201600013},
+	year = 2016,
+	month = {dec},
+	publisher = {Wiley},
+	volume = {1},
+	number = {1},
+	pages = {e201600013},
+	author = {Brian Seger and Ole Hansen and Peter C. K. Vesborg},
+	title = {A Flexible Web-Based Approach to Modeling Tandem Photocatalytic Devices},
+	journal = {Solar {RRL}}
+}
+
+@incollection{Davies1995,
+	doi = {10.1002/9780470133507.ch4},
+	url = {https://doi.org/10.1002%2F9780470133507.ch4},
+	publisher = {John Wiley {\&} Sons, Inc.},
+	pages = {235--310},
+	author = {Julian A. Davies and David L. Boucher and Jimmie G. Edwards},
+	title = {The Question of Artificial Photosynthesis of Ammonia on Heterogeneous Catalysts},
+    year = {1995},
+    volume = {19},
+	booktitle = {Advances in Photochemistry}
+}
+
+@article{Comer_JACS,
+	doi = {10.1021/jacs.8b08464},
+	url = {https://doi.org/10.1021%2Fjacs.8b08464},
+	year = 2018,
+	month = {oct},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {140},
+	number = {45},
+	pages = {15157--15160},
+	author = {Benjamin M. Comer and Yu-Hsuan Liu and Marm B. Dixit and Kelsey B. Hatzell and Yifan Ye and Ethan J. Crumlin and Marta C. Hatzell and Andrew J. Medford},
+	title = {The Role of Adventitious Carbon in Photo-catalytic Nitrogen Fixation by Titania},
+	journal = {Journal of the American Chemical Society}
 }
 
 @article{walter_2010,
@@ -1090,6 +1170,60 @@ year = {2000}
  address = {Rome Great Britain},
  isbn = {92-5-104639-5}
  }
+ 
+ 
+@incollection{Smith_2016,
+	doi = {10.1007/978-3-319-29641-8_4},
+	url = {https://doi.org/10.1007%2F978-3-319-29641-8_4},
+	year = 2016,
+	publisher = {Springer International Publishing},
+	pages = {163--197},
+	author = {Wilson A. Smith},
+	title = {Photoelectrochemical Cell Design, Efficiency, Definitions, Standards, and Protocols},
+	booktitle = {Photoelectrochemical Solar Fuel Production}
+}
+
+@article{Bligaard_2016,
+	doi = {10.1021/acscatal.6b00183},
+	url = {https://doi.org/10.1021%2Facscatal.6b00183},
+	year = 2016,
+	month = {mar},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {6},
+	number = {4},
+	pages = {2590--2602},
+	author = {Thomas Bligaard and R. Morris Bullock and Charles T. Campbell and Jingguang G. Chen and Bruce C. Gates and Raymond J. Gorte and Christopher W. Jones and William D. Jones and John R. Kitchin and Susannah L. Scott},
+	title = {Toward Benchmarking in Catalysis Science: Best Practices, Challenges, and Opportunities},
+	journal = {{ACS} Catalysis}
+}
+ 
+ @article{McCrory_2015,
+	doi = {10.1021/ja510442p},
+	url = {https://doi.org/10.1021%2Fja510442p},
+	year = 2015,
+	month = {mar},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {137},
+	number = {13},
+	pages = {4347--4357},
+	author = {Charles C. L. McCrory and Suho Jung and Ivonne M. Ferrer and Shawn M. Chatman and Jonas C. Peters and Thomas F. Jaramillo},
+	title = {Benchmarking Hydrogen Evolving Reaction and Oxygen Evolving Reaction Electrocatalysts for Solar Water Splitting Devices},
+	journal = {Journal of the American Chemical Society}
+}
+
+@article{Chen_2010,
+	doi = {10.1557/jmr.2010.0020},
+	url = {https://doi.org/10.1557%2Fjmr.2010.0020},
+	year = 2010,
+	month = {jan},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {25},
+	number = {01},
+	pages = {3--16},
+	author = {Zhebo Chen and Thomas F. Jaramillo and Todd G. Deutsch and Alan Kleiman-Shwarsctein and Arnold J. Forman and Nicolas Gaillard and Roxanne Garland and Kazuhiro Takanabe and Clemens Heske and Mahendra Sunkara and Eric W. McFarland and Kazunari Domen and Eric L. Miller and John A. Turner and Huyen N. Dinh},
+	title = {Accelerating materials development for photoelectrochemical hydrogen production: Standards for methods, definitions, and reporting protocols},
+	journal = {Journal of Materials Research}
+}
  
  @article{Comer_2018,
 	doi = {10.1021/acssuschemeng.7b03652},
