--- a/SI.tex
+++ b/SI.tex
@@ -32,24 +32,28 @@
 \newpage
 
 \section{Calculations}
-The concentration of NH$_3$ at which it can be detected through the human sense of smell
-\begin{align*}
-\mathrm{
-& 50ppm \: NH_3 \times \frac{10^{-6}}{ppm} \times 101.325kPa \times \frac{1000 \: Pa}{kPa} \times 0.59 \frac{mol}{m^3Pa} \times \frac{m^3M}{1000mol} \times \\
-& \frac{mM}{10^{-3} M} = 2.98mM \: NH_3 \approx 3mM \: NH_3
-}
-\end{align*}
+%The concentration of NH$_3$ at which it can be detected through the human sense of smell
+%\begin{align*}
+%\mathrm{
+%& 50ppm \: NH_3 \times \frac{10^{-6}}{ppm} \times 101.325kPa \times \frac{1000 \: Pa}{kPa} \times 0.59 \frac{mol}{m^3Pa} \times \frac{m^3M}{1000mol} \times \\
+%& \frac{mM}{10^{-3} M} = 2.98mM \: NH_3 \approx 3mM \: NH_3
+%}
+%\end{align*}
 
 The approximate per hectre nitrogen contributed to croplands by biological nitrogen fixation. total biological nitrogen fixation is estimated at 33 Tg N/yr by Smil\cite{Smil_1999_2} and cropland area estimated by FAOSTAT. All values for 1999
 \begin{equation}
 \mathrm{
 33 \frac{Tg}{yr} \: \times \frac{1}{1540687.59 kha} \: \times \frac{kha}{1000 ha} \: \times \frac{10^{9} kg}{Tg} = 21.4 \frac{kg}{ha\:yr}
 }
+
+
 \end{equation}
+Herridge et. al. \cite{Herridge_2008} estimate the yearly fixed nitrogen production to be 50-70 $\frac{Tg}{yr}$ translating to 45.4 and 32.4 $\frac{kg}{ha \: yr}$
+
 
 Ammount of activated carbon needed to fertilizer one hectare of land for one year. Based off 50kg N/ha yr and highest adsorption capacity of NH$_3$ on activated carbon found in the literature (16mg NH$_3$/g C)\cite{Gon_alves_2011}.
 \begin{equation}
-\mathrm{ 50 \frac{kg \: N}{ha \: yr} \: \times \frac{g \: C}{16 \: mg \: NH_3} \: \times \frac{17g\:NH_3}{14g\:N}  \times \: 1000 \frac{mg}{g} = 3,795 \frac{kg\:C}{ha \: yr}
+\mathrm{ 100 \frac{kg \: N}{ha \: yr} \: \times \frac{g \: C}{16 \: mg \: NH_3} \: \times \frac{17g\:NH_3}{14g\:N}  \times \: 1000 \frac{mg}{g} = 7,589 \frac{kg\:C}{ha \: yr}
 }
 \end{equation}
 
@@ -59,6 +63,23 @@ The volume density of NH$_3$ in maximally saturated activated carbon. Highest ad
 }
 \end{equation}
 
+The energy per mole required to produce ammonia by electrocatalysis. Values from Song et al.\cite{Song_2018}. 0.0525 is the electrical energy efficiency they report
+\begin{equation}
+\mathrm{\frac{1}{0.00525} \times \frac{339 \: kJ}{mol} = 6460 kJ/mol
+}
+\end{equation}
+
+The energy per mole required to produce ammonia by photocatalysis. Values from Shiraishi et. al.\cite{Shiraishi_2018}. 0.001 is the solar to chemical efficiency (defined as energy in formed ammonia/light energy added)
+\begin{equation}
+\mathrm{\frac{1}{0.001} \times \frac{339 \: kJ}{mol} = 3.39 \cdot 10^5 kJ/mol
+}
+
+\end{equation}
+%\begin{equation}
+%\mathrm{\frac{100 kg}{ha*yr} * \frac{1000 mol}{ 17 kg} * \frac{1 year}{365 days} * \frac{1 day }{ 24 hr} / ((100/10^6) \frac{55.41 mol}{L} to L/(ha*hr)
+%}
+
+%\end{equation}
 %\newpage
 
 \pagebreak
