--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@
 \author[GTME]{Carlos Fernandez}
 \author[GTChBE]{Pratham Arora}
 \author[GTChBE]{Matthew Realff}
-\author[IFDC]{Upendra P. Singh}
+\author[IFDC]{Upendra Singh}
 \author[GTME]{Marta C. Hatzell}
 \author[GTChBE]{Andrew J. Medford}
 
@@ -134,7 +134,7 @@
 
 \begin{abstract}
 
-Using solar energy to convert triple bonded molecular di-nitrogen from the air into fixed nitrogen products that act as nutrients for plants presents an opportunity to develop ``solar fertilizers''. The approach has much in common with solar fuels and chemicals, but also has some unique advantages and challenges. The possibility of producing nitrogen fertilizers at a country’s regional level may be able to effectively compete with existing technology by reducing the per unit cost of N nutrient production, removing or reducing transportation costs within or across international borders, and integrating with existing infrastructure. Furthermore, solar fertilizer technologies can reduce the energy and carbon footprint currently associated with the Haber-Bosch process for ammonia synthesis. Deploying solar fertilizer technology in developing countries can also improve access to fertilizers for farmers in remote regions and help achieve the United Nations Sustainable Development Goal 2 of ending hunger and ensuring access to safe, nutritious and sufficient food by all people, in particular the poor. %This goal calls for crucial investments to increase agricultural productivity and for sustainable food production systems to help alleviate the perils of hunger. 
+Using solar energy to convert triple bonded molecular di-nitrogen from the air into fixed nitrogen products that act as nutrients for plants presents an opportunity to develop ``solar fertilizers''. The approach has much in common with solar fuels and chemicals, but also has some unique advantages and challenges. The possibility of producing nitrogen fertilizers at a country's regional level may be able to effectively compete with existing technology by reducing the per unit cost of N nutrient production, removing or reducing transportation costs within or across international borders, and integrating with existing infrastructure. Furthermore, solar fertilizer technologies can reduce the energy and carbon footprint currently associated with the Haber-Bosch process for ammonia synthesis. Deploying solar fertilizer technology in developing countries can also improve access to fertilizers for farmers in remote regions and help achieve the United Nations Sustainable Development Goal 2 of ending hunger and ensuring access to safe, nutritious and sufficient food by all people, in particular the poor. %This goal calls for crucial investments to increase agricultural productivity and for sustainable food production systems to help alleviate the perils of hunger. 
 %and the goals from developing countries governments’ of increasing food security for their population.
 However, there are also substantial challenges that must be overcome in identifying active catalytic materials and effectively integrating solar fertilizer processes with agricultural infrastructure. This paper outlines the agronomic considerations that drive the development of decentralized solar fertilizer production, and explores their implications on fertilizer prices with an emphasis on the developing world. The work also provides an overview of the technical strategies that may enable photo(electro)chemical fertilizer production processes, including the use of fertigation or production of enhanced biochar, and identifies some target metrics and testing considerations to promote efficient development of new fertilizer materials and processes.
 
