--- a/refs.bib
+++ b/refs.bib
@@ -156,7 +156,7 @@
 
 @misc{FAO_2017,
   Title                    = {The State of Food Security and Nutrition in the World 2017. Building resilience for peace and food security.},
-  Author                   = {FAO, IFAD, UNICEF, WFP and WHO},
+  author                   = {{FAO, IFAD, UNICEF, WFP and WHO}},
   Year                     = {2017},
   Location                 = {Rome, Italy},
 }
@@ -351,7 +351,7 @@ year = {2013}
 	doi = {10.1093/femsle/fnx274},
 	url = {https://doi.org/10.1093%2Ffemsle%2Ffnx274},
 	year = 2017,
-	month = {dec},
+	month = {Dec},
 	publisher = {Oxford University Press ({OUP})},
 	volume = {365},
 	number = {2},
@@ -361,17 +361,17 @@ year = {2013}
 }
 
 @article{MacLeod_2013,
-	doi = {10.1002/chin.201334195},
-	url = {https://doi.org/10.1002%2Fchin.201334195},
+	doi = {10.1038/nchem.1620},
+	url = {https://doi.org/10.1038%2Fnchem.1620},
 	year = 2013,
-	month = {aug},
-	publisher = {Wiley},
-	volume = {44},
-	number = {34},
-	pages = {no--no},
+	month = {may},
+	publisher = {Springer Nature},
+	volume = {5},
+	number = {7},
+	pages = {559--565},
 	author = {K. Cory MacLeod and Patrick L. Holland},
-	title = {{ChemInform} Abstract: Recent Developments in the Homogeneous Reduction of Dinitrogen by Molybdenum and Iron},
-	journal = {{ChemInform}}
+	title = {Recent developments in the homogeneous reduction of dinitrogen by molybdenum and iron},
+	journal = {Nature Chemistry}
 }
 
 @article{Foster2018,
@@ -464,7 +464,7 @@ year = {2018}
 
 @article{Huang2007,
 abstract = {The volatile and upward trend in U.S. natural gas prices from 2000-06 has led to a 17- percent decline in the Nations annual aggregate supply of ammonia. During the period, U.S. ammonia production declined 44 percent, while U.S. ammonia imports increased 115 percent. Also, the share of U.S.-produced ammonia in the U.S. aggregate supply of ammonia dropped from 80 to 55 percent, while the share from imports increased from 15 percent to 42 percent. Meanwhile, ammonia prices paid by farmers increased from {\$}227 per ton in 2000 to {\$}521 per ton in 2006, an increase of 130 percent. Natural gas is the main input used to produce ammonia. Additional increases in U.S. natural gas prices could lead to a further decline in domestic ammonia production and an even greater rise in ammonia imports.},
-author = {Huang, Wen-yuan},
+author = {Huang, {Wen-yuan}},
 file = {:home/benjamin/Downloads/11717{\_}wrs0702{\_}1{\_}.pdf:pdf},
 journal = {Management},
 keywords = {ammonia supply,natural gas ammonia,natural gas ammonia prices,ni,nitrogen fertilizers,prices},
@@ -483,7 +483,7 @@ journal = {Global Biogeochemical Cycles},
 keywords = {http://dx.doi.org/10.1029/1999GB900015, doi:10.102},
 number = {2},
 pages = {647--662},
-title = {{Nitrogen in crop production : An account of global flows adds recycled in organic up by harvested and Quantification of N losses from crop to 26-60}},
+title = {{Nitrogen in crop production: An account of global flows adds recycled in organic up by harvested and Quantification of N losses from crop to 26-60}},
 volume = {13},
 year = {1999}
 }
@@ -497,7 +497,7 @@ year = {1999}
 	number = {3},
 	pages = {1235--1245},
 	author = {Egill Sk{\'{u}}lason and Thomas Bligaard and Sigr{\'{\i}}dur Gudmundsd{\'{o}}ttir and Felix Studt and Jan Rossmeisl and Frank Abild-Pedersen and Tejs Vegge and Hannes J{\'{o}}nsson and Jens K. N{\o}rskov},
-	title = {A theoretical evaluation of possible transition metal electro-catalysts for {N}$_2$reduction},
+	title = {A theoretical evaluation of possible transition metal electro-catalysts for {N}$_2$ reduction},
 	journal = {Phys. Chem. Chem. Phys.}
 }
 
@@ -529,13 +529,13 @@ year = {2018}
 	journal = {Nature Communications}
 }
 
-@Inbook{Burney1993,
+@Incollection{Burney1993,
 author="Burney, H. S.",
 editor="White, Ralph E.
 and Conway, B. E.
 and Bockris, J. O'M.",
 title="Membrane Chlor-Alkali Process",
-bookTitle="Modern Aspects of Electrochemistry",
+booktitle="Modern Aspects of Electrochemistry",
 year="1993",
 publisher="Springer US",
 address="Boston, MA",
@@ -629,6 +629,7 @@ year = {2009}
 
 @article{FAOSTAT,
 	Author = {FAOSTAT},
+	
 	Title = {Food and Agriculture Organization of the United Nations, Statistical Division.},
 	Website = {http://www.fao.org/faostat/en/#home},
 	Year = {2016}}
@@ -716,18 +717,20 @@ year = {2009}
 	journal = {Science}
 }
 
-@inbook{Lewis_2016,
-author = {Lewis, Nathan S.},
-title = {Progress Towards a Synergistically Integrated, Scalable Solar Fuels Generator},
-booktitle = {Nanotechnology: Delivering on the Promise Volume 2},
-chapter = {1},
-pages = {3-22},
-doi = {10.1021/bk-2016-1224.ch001},
-URL = {https://pubs.acs.org/doi/abs/10.1021/bk-2016-1224.ch001},
-eprint = {https://pubs.acs.org/doi/pdf/10.1021/bk-2016-1224.ch001}
+
+@incollection{Lewis_2016,
+	doi = {10.1021/bk-2016-1224.ch001},
+	url = {https://doi.org/10.1021%2Fbk-2016-1224.ch001},
+	year = 2016,
+	publisher = {American Chemical Society},
+	pages = {3--22},
+	author = {Nathan S. Lewis},
+	title = {Progress Towards a Synergistically Integrated, Scalable Solar Fuels Generator},
+	booktitle = {Nanotechnology: Delivering on the Promise Volume 2}
 }
 
-@inbook{phocaides2007handbook,
+
+@incollection{phocaides2007handbook,
 author = {Phocaides, A.},
 title = {Fertigation},
 booktitle = {Handbook on pressurized irrigation techniques},
@@ -1298,12 +1301,12 @@ year = {2005}
  }
  
  
-@inbook{ammonia_encyclopedia,
+@incollection{ammonia_encyclopedia,
 publisher = {John Wiley {\&} Sons, Inc.},
 author = {Czuppon, T. A., Knez, S. A. and Rovner, J. M. },
 isbn = {9780471238966},
 booktitle = {Kirk‐Othmer Encyclopedia of Chemical Technology},
-chapter = {ammonia},
+title = {ammonia},
 pages = {},
 doi = {10.1002/0471238961.0113131503262116.a01},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/0471238961.0113131503262116.a01},
@@ -1503,12 +1506,12 @@ volume = {20},
 year = {2014}
 }
 
-@inbook{Ullmann_amm_2006,
+@incollection{Ullmann_amm_2006,
 author = {Appl, Max},
-publisher = {Wiley},
+publisher = {John Wiley {\&} Sons, Inc},
 isbn = {9783527306732},
-title = {Ullmann's Encyclopedia of Industrial Chemistry},
-chapter = {Ammonia},
+booktitle = {Ullmann's Encyclopedia of Industrial Chemistry},
+title = {Ammonia},
 pages = {},
 doi = {10.1002/14356007.a02_143.pub2},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/14356007.a02_143.pub2},
@@ -1556,12 +1559,12 @@ address={Palisades, NY},
 url={https://doi.org/10.7927/H4C8276G}
 }
 
-@inbook{kirk_nitro_2005,
+@incollection{kirk_nitro_2005,
 author = {Hardenburger, Thomas L. and Ennis, Matthew and },
-publisher = {Wiley},
+publisher = {John Wiley {\&} Sons, Inc},
 isbn = {9780471238966},
 title = {Nitrogen},
-booktitle = {Kirk‐Othmer Encyclopedia of Chemical Technology},
+booktitle = {Kirk-‐Othmer Encyclopedia of Chemical Technology},
 chapter = {},
 pages = {},
 doi = {10.1002/0471238961.1409201808011804.a01.pub2},
@@ -1642,7 +1645,7 @@ year = {2003}
 	title = {Techno-Economic Analysis of Biomass Fast Pyrolysis to Transportation Fuels}
 }
 
-@article{heckman_2006, title={A history of organic farming: Transitions from Sir Albert Howard's War in the Soil to USDA National Organic Program}, volume={21}, DOI={10.1079/RAF2005126}, number={3}, journal={Renewable Agriculture and Food Systems}, publisher={Cambridge University Press}, author={Heckman, J.}, year={2006}, pages={143–150}}
+@article{heckman_2006, title={A history of organic farming: Transitions from Sir Albert Howard's War in the Soil to {USDA} National Organic Program}, volume={21}, DOI={10.1079/RAF2005126}, number={3}, journal={Renewable Agriculture and Food Systems}, publisher={Cambridge University Press}, author={Heckman, J.}, year={2006}, pages={143–150}}
 
 
   	
@@ -1674,7 +1677,7 @@ Sugiyama and Katsushi Fujii},
 
 @article{FUJISHIMA_1972,
 	doi = {10.1038/238037a0},
-	url = {https://doi.org/10.1038\%2F238037a0},
+	url = {https://doi.org/10.1038%2F238037a0},
 	year = 1972,
 	month = {jul},
 	publisher = {Springer Nature},
@@ -1688,14 +1691,14 @@ Sugiyama and Katsushi Fujii},
 
 @article{Hardee_1976,
 	doi = {10.1149/1.2132984},
-	url = {https://doi.org/10.1149\%2F1.2132984},
+	url = {https://doi.org/10.1149%2F1.2132984},
 	year = 1976,
 	publisher = {The Electrochemical Society},
 	volume = {123},
 	number = {7},
-	pages = {1024},
-	author = {Kenneth L. Hardee},
-	title = {Semiconductor Electrodes},
+	pages = {1024-1026},
+	author = {Kenneth L. Hardee, Allen J. Bard},
+	title = {Semiconductor Electrodes {V}. The Application of Chemically Vapor Deposited Iron Oxide Films to Photosensitized Electrolysis},
 	journal = {Journal of The Electrochemical Society}
 }
 
@@ -1878,9 +1881,10 @@ and Sarah Gavian},
 
 @misc{FAOSTAT_2018,
   author = {FAOSTAT},
+  howpublished = {Web Database},
   title = {Cropland},
   year = {2019},
-  note = {Data retrieved from FAOSTAT database: \url{http://www.fao.org/faostat/en/\#data/RL}},
+  note = {Data retrieved from FAOSTAT: \url{http://www.fao.org/faostat/en/\#data/RL}},
 }
 
 @techreport{Argus_Feb,
@@ -1914,16 +1918,18 @@ and Sarah Gavian},
   title = {Urea Price In Ghana 2017},
   year = {2017},
   howpublished = {Web Database},
-  %note = {data retrieved from FAOSTAT database}, 
   url = {https://africafertilizer.org/ghana/#tab-id-3},
+  note = {Data retrieved from Africafertilizer.org: \url{https://africafertilizer.org/ghana/#tab-id-3}}}
 }
 
 @misc{africafertilizer_2018, 
     title={AfricaFertilizer.org}, 
     howpublished = {Web Database},
-        url={http://africafertilizer.org/}, 
-        year={2018}, 
-        month={Nov}}
+    url={http://africafertilizer.org/}, 
+    year={2018}, 
+    month={Nov},
+    note = {Data retrieved from Africafertilizer.org: \url{https://africafertilizer.org/production/}}}
+
 
 
 @article{Hawtof_2019,
@@ -2092,7 +2098,7 @@ and Sarah Gavian},
 
 @Book{kafkafi2011fertigation,
  author = {Kafkafi, Uzi},
- title = {Fertigation : a tool for efficient fertilizer and water management},
+ title = {Fertigation: a tool for efficient fertilizer and water management},
  publisher = {International fertilizer industry Association International potash Institute},
  year = {2011},
  address = {Paris (28 rue Marbeuf, 75008) Horgen (Switzerland},
